2005-11-05
<olenf@ans.pl>
	o -t and -u are optional at update.
	o Improved conntrack -h output
	o add htons for icmp id.
<pablo@eurodev.net>
	o Fixed versioning :(
	o Bumped version to 0.97

2005-11-03
<laforge@netfilter.org>
	o Use extra 'data' argument of nfct_register_callback() function that
	  I've introduced in libetfilter_conntrack.
<olenf@ans.pl>
	o moves conntrack tool from bin to sbin directory since this
	application is an administration utility and it requires uid==0 or
	CAP_NET_ADMIN
<pablo@eurodev.net>
	o check if --state missing when -p is passed
	o command type is passed to final_check: checkings based on the
	command can be done now.
	o kill duplicated definition of IPS_* bits: Already present in 
	libnetfilter_conntrack.
	o Move action and command enum to conntrack.h
	o kill NIPQUAD macro
	o make conntrack handler cth static.
	o Bumped version to 0.96

2005-11-01
<pablo@eurodev.net>
	o Fix error message describing illegal option -E -i
	o -D -i ID requires tuple information: Display an error message
	o Use NFCT_ALL_CT_GROUPS flag instead of NFCT_ALL_GROUPS
	o Event mask doesn't make sense for expectations, kill dead code
	o Bumped version to 0.95
<olenf@ans.pl>
	o Fix wrong formating in conntrack -h

2005-10-30
<pablo@eurodev.net>
	Special thanks to Deti Fiegl from the Leibniz Supercomputing Centre in
	Munich, Germany for providing the "fast" hardware to reproduce
	spurious bugs ;)

	o Replace misleading message "Not enough memory" by "Can't open handler"
	o New option -i for expectation dumping: conntrack -L expect [-i]
	o sed 's/VERSION/CONNTRACK_VERSION/g'
	o Fix nfct_open flags, now uses NFCT_ALL_GROUPS when needed
	o Bumped version to 0.94

2005-10-28
<pablo@eurodev.net>
	o New option -i for dumping: conntrack -L [-i]
	o Fixed warning in findproto due to a stupid wrong type definition
	o sed 's/nfct_set_callback/nfct_register_callback/g'
	o killed the 'retry' logic, *sigh* it is broken in some cases