@@ -1,9 +1,15 @@
+2005-11-08
+<olenf@ans.pl>
+	o Fix warnings generated by gcc -Wall
+	o Fix conntrack exit value at error
+	o Replace obsolete inet_addr by inet_aton
+
 2005-11-05
 <olenf@ans.pl>
-	o -t and -u are optional at update.
 	o Improved conntrack -h output
 	o add htons for icmp id.
 <pablo@eurodev.net>
+	o -t and -u are optional at update.
 	o Fixed versioning :(
 	o Bumped version to 0.97
 
